css/stylesPhone.css
/* ... */
.showcase h1 {
    margin: 0 0 20px 0;
    color: #f6f7f9;
    font-weight: 400;
    font-size: 30px;
}
.showcase p {
    margin-bottom: 25px;
	font-size: 20px;
    color: #f6f7f9;
}
.showcase object {
	position: relative;
	text-align: center;
	display: block;
	margin: auto;
	
}
.showcase-wrap {
    position: relative;
    padding: 100px 0;
    min-height: 600px;
}


/* ==========================================================================
Screenshots Intro
========================================================================== */
.screenshots-intro {
    padding: 170px 0 100px 0;
    background-color: #f6f7f9;
}
.screenshots-intro h1 {
    margin-bottom: 20px;
	/* color of intro text header */
    color: #325271;
    font-weight: 400;
    font-size: 22px;
}
.screenshots-intro p {
    margin-bottom: 25px;
	/* color of intro text */
    color: #325271;
}

.screenshots-intro i {
	font-size: 35px;
	color: #325271;
}


/* ==========================================================================
Screenshots
========================================================================== */
.screenshots ul {
    margin: 0;
    padding: 0;
    width: 100%;
}
.screenshots ul li {
    float: left;
    min-height: 100%;
    width: 25%;
    background-color: #000;
    list-style: none;
}
.screenshots figure {
    position: relative;
    overflow: hidden;
}
.screenshots figure img {
    width: 100%;
    height: 100%;
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}
.screenshots figure:hover img, .screenshots figure:focus img {
    -webkit-transform: scale(1.1);
    -ms-transform: scale(1.1);
    transform: scale(1.1);
}
.screenshots figcaption {
    position: absolute;
    top: 0;
    left: 0;
    padding: 25% 0;
    width: 100%;
    height: 100%;
	/* hover over background */
    background-color: rgba(20, 32, 44, 0.95);
    text-align: center;
    font-size: 15px;
    opacity: 0;
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}
.screenshots figcaption a {
    /* hover over text color */
	color: #fff
}
.screenshots figcaption a:hover, .screenshots figcaption a:focus {
	/* hover over on hover over on pictures in screenshots */
    color: #ff8717
}
.screenshots figure:hover figcaption, .screenshots figure:focus figcaption {
    opacity: 1
}
.visible {
    opacity: 1
}
.screenshots figure.cs-hover figcaption {
    opacity: 1
}
.screenshots figcaption i {
    font-size: 20px
}
.screenshots figcaption p {
    margin-bottom: 0;
    text-transform: uppercase;
	font-size: 10px;
    font-weight: 400;
	width: 100px;
}
.screenshots figcaption .caption-content {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -40px;
    margin-left: -100px;
    width: 200px;
    -webkit-transform: translate(0px, 15px);
    -ms-transform: translate(0px, 15px);
    transform: translate(0px, 15px);
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}
.screenshots figure:hover figcaption .caption-content, .screenshots figure:focus figcaption .caption-content {
    -webkit-transform: translate(0px, 0px);
    -ms-transform: translate(0px, 0px);
    transform: translate(0px, 0px);
}

/* ==========================================================================
Footer
========================================================================== */
footer {
    padding: 75px 0
}

footer img {
	text-align: center;
}

footer p {
	/* footer text color */
    color: #c7cacc;
    font-size: 12px;
}
footer ul {
    margin-top: 30px
}
footer li {
    float: left;
    margin-right: 15%;
    list-style: none;
    text-transform: uppercase;
    font-weight: 400;
	padding: 0 10px;
}
footer li a {
	/*footer links color */
    color: #3f6184
}
footer li:last-child {
    margin-right: 0
}

/* ==========================================================================
Nav Overlay
========================================================================== */
/* Overlay style */

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
	/* menu overlay background */
    background: rgba(20, 32, 44, 0.95);
}

/* Menu style */
.overlay nav {
    position: relative;
    top: 35%;
    height: 60%;
    text-align: center;
    font-size: 54px;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}
.overlay ul {
    position: relative;
    display: inline-block;
    margin: 0 auto;
    padding: 0;
    list-style: none;
}
.overlay ul li {
    display: block;
    float: left;
}
.overlay ul li:last-child {
    margin-right: 0px
}
.overlay ul li i {
    display: block;
    margin-bottom: 10px;
    font-size: 30px;
}
.overlay ul li a {
    display: block;
    padding: 10px 10px;
    min-width: 190px;
    border: 2px solid #fff;
    border-radius: 3px;
	/* Menu icons background color */
    background-color: #345271;
    color: #fff;
    text-transform: uppercase;
    font-weight: 400;
    font-size: 15px;
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}
.overlay ul li a:hover, .overlay ul li a:focus {
	/* Hover over color for menu */
    border-color: #ff8717;
    color: #ff8717;
}

/* Effects */
.overlay-boxify {
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 0.5s, visibility 0s 0.5s;
    transition: opacity 0.5s, visibility 0s 0.5s;
}
.overlay-boxify.open {
    visibility: visible;
    opacity: 1;
    -webkit-transition: opacity 0.5s;
    transition: opacity 0.5s;
}
.overlay-boxify nav ul li {
    opacity: 0;
    -webkit-transform: translate3d(0, -80px, 0);
    transform: translate3d(0, -80px, 0);
    -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
    transition: transform 0.5s, opacity 0.5s;
}
.overlay-boxify.open nav ul:first-child li:first-child {
    -webkit-transition-delay: 0.05s;
    transition-delay: 0.05s;
}
/* ... */

